feat(seo image): incluir imagem seo
